--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
                         if(result.msg=='success'){
                             $item=$('<p style="background-color:#5BE6FF">'+title+':'+$('#comment').val()+'</p>')
                             $('#messages').append($item)
+                            $('input').val('')
                         }
                         else
                             alert('fail')
