--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="messages">
-        {% for note in notes%}
-            <p style="background-color:#5BE6FF">{{note.title}}:{{note.comment}}</p>
-        {% endfor %}
+    <div class="container">
+        <div id="messages" class="card" style="margin-top: 20px; margin-bottom: 20px; padding: 10px;">
+            {% for note in notes%}
+                <p style="background-color:#AF38EB; color:white; padding: 5px;border-radius: 10px;">{{note.title}}:<br> {{note.comment}}</p>
+            {% endfor %}
+        </div>
     </div>
-    <p>title</p>
-    <input type="text" id="title">
-    <p>comment</p>
-    <input type="text" id="comment">
-    <button>add</button>
+    
+    <div class="container"> 
+        <p>title</p>
+        <input type="text" id="title">
+        <p>comment</p>
+        <input type="text" id="comment">
+        <button>add</button>
+    </div>
+    
     <script>
         $('button').click(function(){
             title=$('#title').val()
@@ -28,7 +36,7 @@
                     cache: false,
                     success: function(result) {  
                         if(result.msg=='success'){
-                            $item=$('<p style="background-color:#5BE6FF">'+title+':'+$('#comment').val()+'</p>')
+                            $item=$('<p style="background-color:#AF38EB; color:white; padding: 5px;border-radius: 10px;">'+title+':<br>'+$('#comment').val()+'</p>')
                             $('#messages').append($item)
                             $('input').val('')
                         }
